# instant-games-open-mcp

./: .commitlintrc.cjs  .cursorrules  .env.docker  .env.example  .eslintrc.cjs  .gitignore  .lintstagedrc  .prettierignore  .prettierrc  .releaserc.cjs  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bundle  Dockerfile.local  MCP-RESOURCES-PROMPTS.md  PRIVATE_PROTOCOL.md  README.md  REFACTOR_APP_MODULE.md  RELEASE-1.0.4.md  docker-compose.bundle.yml  docker-compose.yml  jest.config.cjs  package-lock.json  package.json  pyproject.toml  run_mcp.sh  test-mcp-features.js  test-oauth-flow.sh  test_docs_server.py  tsconfig.json  verify-local.sh
.github/: copilot-instructions.md
.github/workflows/: auto-assign.yml  beta-release.yml  build-native.yml  claude-review.yml  codeql.yml  maker-npm-access.yml  maker-npm-tags.yml  pr-review.yml  pr.yml  publish-maker.yml  release-review-guard.yml  release.yml
.superpowers/sdd/: task-1-report.md  task-2-report.md
config/: maker-version-policy.json
docker/: README.md
docker/local/: Dockerfile  docker-compose.yml  run.sh
docker/npm/: Dockerfile  docker-compose.yml  run.sh
docs/: AI_SETUP_GUIDE.md  APP_CACHE_SYSTEM.md  ARCHITECTURE.md  BACKEND_API.md  CI_CD.md  CODE_REVIEW.md  DEPLOYMENT.md  DOCKER_BUNDLE.md  DOCKER_DEPLOYMENT.md  LOG_SYSTEM.md  MAKER.md  MAKER_CLI_FIRST_REWORK_FLOW.md  MAKER_CLI_LOCAL_TESTING.md  MAKER_CLI_MCP_SKILL_REWORK_OVERVIEW.md  MAKER_MCP_CONNECTION_TROUBLESHOOTING.md  MAKER_PYTHON_RUNTIME_WINDOWS_TEST.md  MAKER_WINDOWS_TEST_CASES.md  MCP_PROXY_GUIDE.md  MCP_USAGE.md  OPENCLAW_PLUGIN.md  PATH_RESOLUTION.md  PRIVATE_PROTOCOL.md  PROXY.md  PROXY_CLIENT_CONFIG.md  QUICK_START.md  RELEASE_PR_GUARDS.md  STANDALONE_PROXY.md  TAPCODE_QUICK_START.md  USER_GUIDE.md
docs/architecture/: REFACTOR_APP_MODULE.md  REFACTOR_PROPOSAL.md
examples/: openhands_integration.json
native/: .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json
native/src/: lib.rs
scripts/: README.md  build.sh  bundle-maker.js  bundle-proxy.js  bundle-server.js  check-no-ci-skip.cjs  check-release-scope.cjs  create-feature.sh  deploy-docker.sh  docker-start.sh  generate-main-release-notes.cjs  prepare-maker-package.js  release-openclaw-plugin.sh  release-scope.cjs  resolve-main-release-version.js  resolve-maker-version.js  semantic-release-main-analyzer.cjs  test-debug-feedback-rnd.sh  update-maker-version-policy.cjs
skills/taptap-dc-ops-brief/: SKILL.md
skills/taptap-maker-dev-kit-guide/: SKILL.md
skills/taptap-maker-local/: SKILL.md
skills/update-taptap-mcp/: SKILL.md
src/: server.ts  version.ts
src/__tests__/: appListDisplay.test.ts  ciSkipPolicy.test.ts  macTokenValidator.test.ts  mainPackageManifest.test.ts  mainReleaseNotes.test.ts  mainReleaseVersionPolicy.test.ts  makerAudioProxyTools.test.ts  makerAudioToolDescriptions.test.ts  makerBuildLocalChanges.test.ts  makerCliCommands.test.ts  makerCliLogin.test.ts  makerClientIdFallback.test.ts  makerCloneBinding.test.ts  makerCrashLog.test.ts  makerDevKit.test.ts  makerEnvironmentConfig.test.ts  makerGitEnvironment.test.ts  makerGitProgress.test.ts  makerIdentify.test.ts  makerInstallClaude.test.ts  makerLifecycle.test.ts  makerLuaLspRuntime.test.ts  makerMcpVersionStatus.test.ts  makerPatTapAuth.test.ts  makerProjectHealth.test.ts  makerProjectsResponse.test.ts  makerProxyBundle.test.ts  makerPublicSurface.test.ts  makerPythonRuntime.test.ts  makerQrcodePreflight.test.ts  makerRuntimeLogs.test.ts  makerSkillInstall.test.ts  makerToolDescriptionScenarios.test.ts  makerToolDescriptions.test.ts  makerTracking.test.ts  makerUpdateGuide.test.ts  makerVersionCheck.test.ts  makerVersionPolicy.test.ts  makerVersionPolicyUpdate.test.ts  mcpProxyLifecycle.test.ts  (+8 more)
src/auth/: deviceFlow.ts
src/config/: promptDefinitions.ts  resourceDefinitions.ts  toolDefinitions.ts
src/data/: leaderboardDocs.ts
(+156 files in other folders)
